# mnist_convolution_network

./: .gitignore  .tool-versions  README.md  app.py  pyproject.toml  requirements.txt  tf-serving.md
notebooks/: data_exploration.ipynb
saved_model/1/: saved_model.pb
saved_model/1/variables/: variables.index
scripts/: config.py  eval.py  submission.csv  train.py  utils.py
