[tool.poetry]
name = "mnist_convolution_network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.3.0"
pandas = "1.1.5"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
jupyter = "^1.0.0"
black = "^21.4b2"
isort = "^5.8.0"
mypy = "^0.812"
attrdict = "^2.0.1"
sklearn = "^0.0"
streamlit = "^0.81.0"
streamlit-drawable-canvas = "^0.6.0"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
